--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -4,7 +4,7 @@
   background-color: white;
   padding: 0;
   margin: 0;
-  height: 35px;
+  height: 33px;
   width: 90%;
   & div {
     padding: 3px;
@@ -59,9 +59,14 @@
 }
 .locate-button {
   position: absolute;
+  border: solid 2px black;
+  height: 50px;
+  width: 50px;
+  background-color: white;
+  border-radius: 50%;
   z-index: 999;
   right: 20px;
-  bottom: 20px;
+  bottom: 30px;
 }
 .leaflet-popup-content {
   height: 261px;
