--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -60,13 +60,13 @@
 .locate-button {
   position: absolute;
   border: solid 1px black;
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
   background-color: white;
   border-radius: 50%;
   z-index: 999;
-  right: 20px;
-  bottom: 30px;
+  right: 10px;
+  top: 10px;
 }
 .leaflet-popup-content {
   height: 261px;
