--- a/src/App.scss
+++ b/src/App.scss
@@ -14,21 +14,20 @@
   height: 100vh;
   width: 100vw;
 
-  img {
-    height: 560px;
-    width: 100%;
-    border-radius: 14px;
-    object-fit: cover;
-  }
+  // img {
+  //   height: 560px;
+  //   width: 100%;
+  //   border-radius: 14px;
+  //   object-fit: cover;
+  // }
 
-  .preview-image {
-    height: 300px;
-    width: 300px;
-    border-radius: 16px;
-    margin-top: 20px;
-  }
+  // .preview-image {
+  //   height: 300px;
+  //   width: 300px;
+  //   border-radius: 16px;
+  //   margin-top: 20px;
+  // }
 }
-
 
 .hidden {
   display: none !important;
