--- a/src/Components/Overlay/Overlay.scss
+++ b/src/Components/Overlay/Overlay.scss
@@ -18,7 +18,7 @@
   }
 }
 
-@media (max-width: 375px), (max-height: 667) {
+@media (max-width: 375px) {
   .overlay {
     &__show-btn {
       min-height: 5px !important;
@@ -27,19 +27,6 @@
       font-size: 16px;
       width: 20px;
       top: 32px;
-    }
-  }
-}
-
-@media (max-width: 375px), (max-height: 812px) {
-  .overlay {
-    &__show-btn {
-      min-height: 5px !important;
-      height: 27px !important;
-      line-height: 30px;
-      font-size: 16px;
-      width: 20px;
-      top: 40px;
     }
   }
 }
@@ -60,6 +47,63 @@
 @media (max-width: 767px) {
   .overlay {
     &__show-btn {
+      min-height: 5px !important;
+      height: 27px !important;
+      font-size: 16px;
+      width: 20px;
+      top: 27px;
+      position: absolute;
+      right: 20px;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .overlay {
+    &__show-btn {
+      min-height: 5px !important;
+      height: 30px !important;
+      line-height: 30px;
+      font-size: 30px;
+      width: 30px;
+      top: 52px;
+      position: absolute;
+      right: 36px;
+    }
+  }
+}
+
+@media (min-width: 834px) {
+  .overlay {
+    &__show-btn {
+      top: 59px;
+      position: absolute;
+      right: 38px;
+    }
+  }
+}
+
+@media (min-width: 1024px) {
+  .overlay {
+    &__show-btn {
+      top: 74px;
+      position: absolute;
+      right: 48px;
+    }
+  }
+}
+
+@media (min-width: 1440px) {
+  .overlay {
+    &__show-btn {
+      min-height: 5px !important;
+      height: 30px !important;
+      line-height: 30px;
+      font-size: 30px;
+      width: 30px;
+      top: 42px;
+      position: absolute;
+      right: 68px;
     }
   }
 }
