--- a/src/containers/FinishedPage/FinishedPage.scss
+++ b/src/containers/FinishedPage/FinishedPage.scss
@@ -1,4 +1,5 @@
 @import "../../assets/styles/variables";
+@import "../../assets/styles/typography";
 .welcome {
   background-position: bottom;
   background-repeat: no-repeat;
@@ -11,8 +12,7 @@
   }
 
   &__title {
-    font-size: 40px;
-
+    font-size: $font-L;
     text-align: center;
   }
 
@@ -147,6 +147,11 @@ $hover-text: $bg-color;
       color: $bg-color;
       background-color: $border-color;
     }
+  }
+}
+@media (min-width: 768px) {
+  .welcome__title {
+    display: none;
   }
 }
 
