--- a/src/containers/Home/Home.scss
+++ b/src/containers/Home/Home.scss
@@ -17,6 +17,24 @@
   width: 300px;
 }
 
+.home__container {
+  .core-buttons {
+    display: flex;
+    justify-content: center;
+    .btn-primary {
+      // max-width: 10px;
+      // max-height: 120px;
+      max-width: 200px;
+      height: 67px;
+      margin-left: 20px;
+      margin-top: 20px;
+    }
+    .btn-secondary {
+      margin-top: 20px;
+    }
+  }
+}
+
 @media screen and (min-width: 375px) {
   .core-buttons {
     .btn-primary {
