--- a/src/containers/FinishedPage/FinishedPage.scss
+++ b/src/containers/FinishedPage/FinishedPage.scss
@@ -1,50 +1,57 @@
 @import "../../assets/styles/variables";
-
+$bg-color: black;
+$bg-color2: #1e9c4b;
+$border-color: #1e9c4b;
+$border-width: 2px;
+$sqrt3: 1.7321; // Square-root of 3
+$hex-height: 70px;
+$hex-min-width: 170px; //$hex-height * $sqrt3 / 2;
+$hex-distance: ($hex-height / (2 * $sqrt3));
+$hover-color: $border-color;
+$hover-text: $border-color;
+$hover-text: $bg-color;
 .banner {
   background-position: bottom;
   background-repeat: no-repeat;
   text-align: center;
-  padding: 20px;
+  padding: 0px;
   margin-bottom: -2px;
-
-  &__logo {
-    height: 130px;
-    width: 130px;
+  &__title {
+    font-size: 40px;
+    text-align: center;
   }
 }
-
-.about {
-  background: #000000;
-  padding: 50px 15%;
+.finished {
+  margin-top: 50px;
+  padding: 0 15%;
   color: $text-primary;
   text-align: center;
-
+  background-repeat: repeat;
+  text-align: center;
   &__title {
     text-align: center;
   }
-
   &__wave {
     position: absolute;
-    left: 0px;
-    margin-top: 40px;
-    transform: rotate(180deg);
+    margin-top: -15px;
+    top: 0;
+    left: 0;
+    height: 400px;
+    width: 100vw;
     z-index: -1;
   }
-
   p {
     margin: 0px 0px 20px 0px;
   }
 }
-
 .socials {
   padding: 0;
   padding-top: 5%;
   text-align: center;
-
   &__title {
     text-align: center;
+    margin-top: 70px;
   }
-
   &__links {
     img {
       width: 60px;
@@ -52,31 +59,13 @@
       opacity: 0.8;
     }
   }
-
   &__rights {
     font-weight: bold;
     color: lightgray;
     font-size: 12px;
   }
 }
-
-$bg-color: black;
-$bg-color2: #1e9c4b;
-
-$border-color: #1e9c4b;
-$border-width: 2px;
-
-$sqrt3: 1.7321;
-$hex-height: 70px;
-$hex-min-width: 170px;
-$hex-distance: ($hex-height / (2 * $sqrt3));
-
-$hover-color: $border-color;
-
-$hover-text: $border-color;
-$hover-text: $bg-color;
-
-.startButton {
+.finishButton {
   letter-spacing: 2px;
   font-weight: bold;
   appearance: none;
@@ -101,7 +90,6 @@ $hover-text: $bg-color;
     #{$hex-distance} 100%,
     0 50%
   );
-
   &::before {
     content: "";
     position: absolute;
@@ -127,7 +115,6 @@ $hover-text: $bg-color;
       100% 0,
       0 0
     );
-
     &:hover {
       color: $bg-color;
       background-color: $border-color;
