--- a/src/App.scss
+++ b/src/App.scss
@@ -25,7 +25,7 @@
 //   //   height: 300px;
 //   //   width: 300px;
 //   //   border-radius: 16px;
-//   //   margin-top: 20px;
+//   //   margin-top: 20px;y
 //   // }
 // }
 
