--- a/src/containers/Information/Information.scss
+++ b/src/containers/Information/Information.scss
@@ -3,6 +3,8 @@
   flex-direction: column;
   justify-content: flex-start;
   height: 100vh;
+  align-items: center;
+  width: 100vw;
 
   .show {
     display: block;
