Added custom form

--- a/src/containers/Information/Information.scss
+++ b/src/containers/Information/Information.scss
@@ -15,7 +15,7 @@
     transition: height 2s linear 500s;
   }
 
-  .form {
+  .info_form {
     padding: 10px;
     border-radius: 20px;
     background-color: #cdefd1;
