--- a/src/containers/Submit/Submit.scss
+++ b/src/containers/Submit/Submit.scss
@@ -22,10 +22,15 @@
 //       margin-top: 20px;
 //     }
 //   }
-.button {
+
+.info {
   display: flex;
+
   justify-content: center;
+  text-align: center;
+  margin-top: 20px;
 }
+
 // }
 
 @media (min-width: 768px) {
