--- a/src/containers/FinishedPage/FinishedPage.scss
+++ b/src/containers/FinishedPage/FinishedPage.scss
@@ -28,6 +28,10 @@ $hover-text: $bg-color;
   text-align: center;
   background-repeat: repeat;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
   &__title {
     text-align: center;
   }
@@ -74,7 +78,7 @@ $hover-text: $bg-color;
   min-width: $hex-min-width;
   height: $hex-height;
   margin: auto;
-  margin-top: 10%;
+  margin-top: 23px;
   text-align: center;
   font-size: 20px;
   line-height: 70px;
